<resources>
    <string name="app_name">Git Trends Explorer</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="element_text">text</string>
    <string name="repo_link_text">"Link: "</string>
    <string name="repo_language_text">"Language: "</string>
    <string name="repo_description_text">"Description: "</string>
    <string name="description_title">Description:</string>
    <string name="languages_title">Languages:</string>
    <string name="link_title">Link:</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="favourites">Favourites</string>
    <string name="git_trends_today">Git Trends Today</string>
    <string name="move_item_to_favourites">Move item to favourites</string>
    <string name="info">Info</string>
    <string name="developer_title">Developer: </string>
    <string name="email_title">Email: </string>
    <string name="email">vankap0n@gmail.com</string>
    <string name="linkedin_title">LinkedIn:</string>
    <string name="linkedin">linkedin.com/in/ivan-ponomarev-38222018a</string>
    <string name="github_title">Github:</string>
    <string name="github">https://github.com/sptrp</string>
</resources>