<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/info_fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.GitTrendsExplorer.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_fragment_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="true">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/repo_avatar_details"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            fresco:placeholderImage="@drawable/avatar_round" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:id="@+id/info_developer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/developer_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="Ivan Ponomarev"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/email_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textStyle="bold"
                android:autoLink="web" />

            <TextView
                android:id="@+id/info_linkedin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/linkedin_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/linkedin"
                android:textStyle="bold"
                android:autoLink="web" />

            <TextView
                android:id="@+id/info_github_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/github_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/github"
                android:textStyle="bold"
                android:autoLink="web" />

        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>