<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/repos_details_fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.GitTrendsExplorer.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true" >

        <ImageButton
            android:id="@+id/favorites_button"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_heart_solid"
            android:background="@color/white"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/move_item_to_favourites" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repos_details_fragment_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/repo_avatar_details"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            fresco:placeholderImage="@drawable/git_logo" />


        <TextView
            android:id="@+id/repo_description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/description_title"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/repo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/repo_languages_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/languages_title"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/repo_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/repo_link_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/link_title"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/repo_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>